WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171453
On-screen panel for candidate bar is in the wrong place when the caret is at the start of a paragraph
https://bugs.webkit.org/show_bug.cgi?id=171453
Summary
On-screen panel for candidate bar is in the wrong place when the caret is at ...
Beth Dakin
Reported
2017-04-28 15:21:35 PDT
On-screen panel for candidate bar is in the wrong place when the caret is at the start of a paragraph 1. Load any web page with a contenteditable field on a Mac with TouchBar. 2. Click on the editable field so that there is a caret at the beginning but no content yet. 3. Tap and hold on a typing suggestion in the TouchBar. Expected: There is onscreen UI just belown the blinking caret. Actual: There is onscreen UI that is arbitrarily far from caret. This bug only happens when the caret is at the beginning of the paragraph, and it seems to be becuase Range::absoluteTextQuads() returns no quads in this case.
Attachments
Patch
(4.01 KB, patch)
2017-04-28 15:31 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
Patch+test
(7.16 KB, patch)
2017-04-28 16:32 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2017-04-28 15:22:09 PDT
rdar://problem/29779764
Beth Dakin
Comment 2
2017-04-28 15:31:25 PDT
Created
attachment 308602
[details]
Patch
Tim Horton
Comment 3
2017-04-28 15:34:46 PDT
Comment on
attachment 308602
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=308602&action=review
No test? :)
> Source/WebKit2/ChangeLog:13 > + is because Range::absoluteTextQuads() returns no quads in this case. I think it > + might be correct that absoluteTextQuads() returns no quads in this case, so this
Should check with Zalan to see if he thinks this is actually correct or a deeper bug.
Beth Dakin
Comment 4
2017-04-28 16:32:52 PDT
Created
attachment 308613
[details]
Patch+test
Tim Horton
Comment 5
2017-04-28 16:34:17 PDT
Comment on
attachment 308613
[details]
Patch+test View in context:
https://bugs.webkit.org/attachment.cgi?id=308613&action=review
> Tools/TestWebKitAPI/Tests/WebKit2Cocoa/WKWebViewCandidateTests.mm:250 > + EXPECT_EQ(194, candidateRect.origin.y);
Will this change if the font changes? That might be annoying. Could use JS to get the real number, or use Ahem, or ...
alan
Comment 6
2017-04-28 19:05:32 PDT
(In reply to Tim Horton from
comment #3
)
> Comment on
attachment 308602
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=308602&action=review
> > No test? :) > > > Source/WebKit2/ChangeLog:13 > > + is because Range::absoluteTextQuads() returns no quads in this case. I think it > > + might be correct that absoluteTextQuads() returns no quads in this case, so this > > Should check with Zalan to see if he thinks this is actually correct or a > deeper bug.
The editable element is super empty, so there's nothing to return.
Beth Dakin
Comment 7
2017-05-01 10:37:18 PDT
https://trac.webkit.org/changeset/216018/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug